--- a/src/main/resources/templates/main.mustache
+++ b/src/main/resources/templates/main.mustache
@@ -1,11 +1,27 @@
 <html>
 
 <body>
+
+    <!-- Кнопка logout -->
+    <div>
+        <form action="/logout" method="post">
+
+            <!-- Защита от хакерских атак(только для mustache) -->
+            <input type="hidden" name="_csrf" value="{{_csrf.token}}">
+
+            <input type="submit" value="Sign Out"/>
+        </form>
+    </div>
+
     <!--Форма добавления сообщений-->
     <div>
-        <form method="post">
+        <form method="post" action="/main">
             <input type="text" name="text" placeholder="Введите сообщение"/>
             <input type="text" name="tag" placeholder="Тэг"/>
+
+            <!-- Защита от хакерских атак(только для mustache) -->
+            <input type="hidden" name="_csrf" value="{{_csrf.token}}"/>
+
             <button type="submit">Добавить</button>
         </form>
     </div>
@@ -14,6 +30,10 @@
     <div>Список сообщений</div>
     <form method="post" action="filter">
         <input type="text" name="filter">
+
+        <!-- Защита от хакерских атак(только для mustache) -->
+        <input type="hidden" name="_csrf" value="{{_csrf.token}}"/>
+
         <button type="submit">Найти</button>
     </form>
     {{#messages}}
