--- a/src/main/resources/templates/main.mustache
+++ b/src/main/resources/templates/main.mustache
@@ -27,6 +27,7 @@
     </div>
 
     <!--Отображение сообщений и поиск по тегу-->
+    <!--Отображение сообщений и поиск по тегу-->
     <div>Список сообщений</div>
     <form method="post" action="filter">
         <input type="text" name="filter">
@@ -41,6 +42,7 @@
         <b>{{id}}</b>
         <span>{{text}}</span>
         <i>{{tag}}</i>
+        <strong>{{authorName}}</strong>
     </div>
     {{/messages}}
 </body>
